Moved away from IBWrapper singleton, Added Crypto, tested Crypto fails on history/paper.